feat: add node-cron and its types to dependencies

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "date-fns": "^4.1.0",
     "mime": "^4.0.7",
+    "node-cron": "^3.0.3",
     "pg": "^8.15.5",
     "qrcode-terminal": "^0.12.0",
     "reflect-metadata": "^0.2.2",
@@ -48,6 +49,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.2",
+    "@types/node-cron": "^3.0.11",
     "@types/qrcode-terminal": "^0.12.2",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
