feat: add @nestjs-twurple and @twurple dependencies for Twitch integration

--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
   },
   "dependencies": {
     "@google/genai": "^0.10.0",
+    "@nestjs-twurple/auth": "^0.2.0",
+    "@nestjs-twurple/chat": "^0.2.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
+    "@twurple/auth": "^7.3.0",
+    "@twurple/chat": "^7.3.0",
     "date-fns": "^4.1.0",
     "mime": "^4.0.7",
     "node-cron": "^3.0.3",
