--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,14 @@ POSTGRES_DB=
 # APP INFO
 APP_PORT=
 
+# TWITCH INFO
+TWITCH_CLIENT_ID=
+TWITCH_CLIENT_SECRET=
+TWITCH_ACCESS_TOKEN=
+TWITCH_REFRESH_TOKEN=
+TWITCH_USER_ID=
+TWITCH_USER_NAME=
+
 # GEMINI INFO
 API_KEY=
 MODEL_NAME=
